--- a/login.html
+++ b/login.html
@@ -1,144 +1,58 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>تسجيل الدخول - نظام OMA</title>
-<style>
-:root {
-  --primary: #004aad;
-  --accent: #ffcc33;
-  --bg: #f5f9ff;
-  --card: #fff;
-}
-body {
-  margin: 0;
-  font-family: 'Cairo', sans-serif;
-  background: linear-gradient(180deg, #ffffff, #f5f9ff);
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.login-box {
-  background: var(--card);
-  padding: 40px;
-  border-radius: 12px;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-  text-align: center;
-  width: 320px;
-}
-h2 {
-  margin-bottom: 25px;
-  color: var(--primary);
-}
-input {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 15px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 15px;
-}
-button {
-  background: var(--primary);
-  color: white;
-  border: none;
-  padding: 12px;
-  width: 100%;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-button:hover {
-  background: #003a8c;
-}
-.error {
-  color: red;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-.success {
-  color: green;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-footer {
-  position: fixed;
-  bottom: 10px;
-  width: 100%;
-  text-align: center;
-  color: #888;
-  font-size: 13px;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>تسجيل الدخول - نظام OMA</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="login-box">
-    <h2>تسجيل الدخول 🔐</h2>
-    <p class="error" id="errorMsg"></p>
-    <input type="email" id="email" placeholder="البريد الإلكتروني" required />
-    <input type="password" id="password" placeholder="كلمة المرور" required />
-    <button id="loginBtn">دخول</button>
-  </div>
+  <main class="login-page">
+    <h2>تسجيل الدخول</h2>
 
-  <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
+    <form id="loginForm">
+      <label for="email">البريد الإلكتروني</label>
+      <input type="email" id="email" placeholder="example@email.com" required>
 
+      <label for="password">كلمة المرور</label>
+      <input type="password" id="password" placeholder="••••••••" required>
+
+      <button type="submit">تسجيل الدخول</button>
+    </form>
+
+    <p id="error-message" style="color:red; margin-top:10px;"></p>
+  </main>
+
+  <!-- ربط Firebase -->
   <script type="module">
-    import { initializeApp } from "./firebase-config.js";
-    import { 
-      getAuth, 
-      signInWithEmailAndPassword, 
-      onAuthStateChanged 
-    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+    import { firebaseConfig } from "./firebase-config.js";
 
-    const app = initializeApp;
+    const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    const emailInput = document.getElementById("email");
-    const passwordInput = document.getElementById("password");
-    const loginBtn = document.getElementById("loginBtn");
-    const errorMsg = document.getElementById("errorMsg");
+    const form = document.getElementById('loginForm');
+    const errorMessage = document.getElementById('error-message');
 
-    // 🔹 عند الضغط على زر الدخول
-    loginBtn.addEventListener("click", async () => {
-      const email = emailInput.value.trim();
-      const password = passwordInput.value.trim();
-
-      if (!email || !password) {
-        errorMsg.textContent = "الرجاء إدخال البريد وكلمة المرور.";
-        return;
-      }
-
-      errorMsg.textContent = "";
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
 
       try {
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        // ✅ تم تسجيل الدخول بنجاح
-        errorMsg.style.color = "green";
-        errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
-        setTimeout(() => {
-          window.location.href = "dashboard.html";
-        }, 1000);
+        const user = userCredential.user;
+
+        // حفظ بيانات المستخدم مؤقتًا في المتصفح
+        localStorage.setItem('omaUser', JSON.stringify({ uid: user.uid, email: user.email }));
+
+        // ✅ التحويل إلى لوحة الإدارة
+        window.location.href = "dashboard.html";
+
       } catch (error) {
         console.error(error);
-        if (error.code === "auth/user-not-found") {
-          errorMsg.textContent = "البريد الإلكتروني غير مسجل.";
-        } else if (error.code === "auth/wrong-password") {
-          errorMsg.textContent = "كلمة المرور غير صحيحة.";
-        } else if (error.code === "auth/too-many-requests") {
-          errorMsg.textContent = "تم تعطيل الحساب مؤقتًا بسبب محاولات فاشلة. حاول لاحقًا.";
-        } else {
-          errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
-        }
-      }
-    });
-
-    // 🔒 التحقق من حالة المستخدم: إذا كان مسجل دخول بالفعل
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        window.location.href = "dashboard.html";
+        errorMessage.textContent = "خطأ في تسجيل الدخول: تأكد من البريد أو كلمة المرور.";
       }
     });
   </script>
